# Rendu

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-review.yml  release-beta.yml  release.yml
docs/: index.html
docs/ja/: index.html
e2e/: fixtures.ts  playwright.config.ts
e2e/tests/: app.spec.ts
scripts/: build-dmg.sh  build-tarball.sh  bump-version.sh  install.command  install.sh
src/: App.tsx  LocaleContext.test.tsx  LocaleContext.tsx  dropUtils.test.ts  dropUtils.ts  html2pdf.js.d.ts  i18n.test.ts  i18n.ts  index.css  main.tsx  useRecentFiles.test.ts  useRecentFiles.ts  useSettings.test.ts  useSettings.ts  useUpdateCheck.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: rendu-cli
src-tauri/src/: lib.rs
src/components/: CodeBlockWrapper.test.tsx  CodeBlockWrapper.tsx  FileTree.test.tsx  FileTree.tsx  ImageWithOverlay.test.tsx  ImageWithOverlay.tsx  Lightbox.test.tsx  Lightbox.tsx  LocalImage.tsx  MarkdownViewer.test.tsx  MarkdownViewer.tsx  MermaidBlock.test.tsx  MermaidBlock.tsx  OutlinePanel.test.tsx  OutlinePanel.tsx  RecentList.test.tsx  RecentList.tsx  Settings.test.tsx  Settings.tsx  SyntaxReference.test.tsx  SyntaxReference.tsx
src/test/: helpers.tsx
src/test/mocks/: mermaid.ts  tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts  tauri-path.ts  tauri-window.ts
src/utils/: svgToPng.ts
