[package]
name = "rendu"
version = "0.6.1"
description = "Lightweight desktop Markdown viewer"
authors = ["Hideo Kashioka"]
license = "MIT"
repository = "https://github.com/kashioka/Rendu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
open = "5"
base64 = "0.22"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
parking_lot = "0.12"
tauri-plugin-playwright = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
e2e-testing = ["tauri-plugin-playwright"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
